# simple_download_utility

./: Cargo.toml  README.MD
examples/: download_file.rs  download_file_with_progress.rs  download_multiple_files.rs
src/: lib.rs
