[package]
name = "simple_download_utility"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
reqwest = { version = "0.13.1", features = ["stream"] }
futures-util = "0.3.31"
sha1 = "0.11.0-rc.3"
thiserror = "2.0.17"
sha_file_hashing = { version = "0.1.1" }


[dev-dependencies]
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread"]}