[package]
name = "simple_download_utility"
version="0.1.1"
edition = "2024"
authors = ["Drew Chase"]
description = "A simple async download utility with progress tracking, SHA1 validation, and concurrent multi-file downloads"
license = "MIT"
repository = "https://github.com/drew-chase/simple_download_utility"
documentation = "https://docs.rs/simple_download_utility"
readme = "README.MD"
keywords = ["download", "http", "async", "progress", "tokio"]
categories = ["asynchronous", "network-programming", "web-programming::http-client"]
exclude = [".idea/", "target/"]

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
reqwest = { version = "0.13.1", features = ["stream"] }
futures-util = "0.3.31"
sha1 = "0.11.0-rc.3"
thiserror = "2.0.17"
sha_file_hashing = { version = "0.1.1" }


[dev-dependencies]
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread"]}